--- a/AutonHuoltoSovellus/KeskikulutusPage.xaml
+++ b/AutonHuoltoSovellus/KeskikulutusPage.xaml
@@ -8,12 +8,12 @@
         <CollectionView x:Name="ConsumptionList">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame BorderColor="LightGray" Padding="10" Margin="5">
+                    <Border Padding="10" Margin="5">
                         <VerticalStackLayout>
                             <Label Text="{Binding Month}" FontSize="18" />
                             <Label Text="{Binding Consumption}" FontSize="16" />
                         </VerticalStackLayout>
-                    </Frame>
+                    </Border>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
